Battling game - 2nd commit

--- a/OneDrive/Bureau/RTT25/DEV/Practice/GAMES/w4d1_battling_alien_game/index.html
+++ b/OneDrive/Bureau/RTT25/DEV/Practice/GAMES/w4d1_battling_alien_game/index.html
@@ -13,6 +13,8 @@
     <body>
         <h1> Welcome to the Game of Battling!</h1>
         <hr>
+
+        <button class="btnAttack">ATTACK</button>
       
         <script src="battling.js" async defer></script>
     </body>
