--- a/OneDrive/Bureau/RTT25/DEV/Practice/GAMES/w4d1_battling_alien_game/index.html
+++ b/OneDrive/Bureau/RTT25/DEV/Practice/GAMES/w4d1_battling_alien_game/index.html
@@ -13,9 +13,19 @@
     <body>
         <h1> Welcome to the Game of Battling!</h1>
         <hr>
+        <div class="alienShips">
+            <div class="alien1">OPPONENT 1</div>
+            <div class="alien1">OPPONENT 2</div>
+            <div class="alien1">OPPONENT 3</div>
+            <div class="alien1">OPPONENT 4</div>
+            <div class="alien1">OPPONENT 5</div>
+            <div class="alien1">OPPONENT 6</div>
 
-        <button class="btnAttack">ATTACK</button>
-      
+        </div>
+
+        <div class="btnContainer">
+        <button class="btnAttack">SHOOT</button>
+        </div>
         <script src="battling.js" async defer></script>
     </body>
 </html>
